# linux-server-admin-bot

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: docker-publish.yml
bot/: __init__.py
bot/handlers/: __init__.py  basic.py  callbacks.py  docker.py  system.py
bot/models/: __init__.py  metrics.py
bot/monitors/: __init__.py  health_monitor.py
bot/services/: __init__.py  alert_manager.py  docker_manager.py  system_monitor.py
bot/utils/: __init__.py  charts.py  decorators.py  formatters.py  keyboards.py
config/: __init__.py  constants.py  logger.py  settings.py
docs/: ARCHITECTURE.md  EXAMPLES.md  GETTING_STARTED.md  PROJECT_STRUCTURE.md
tests/: conftest.py  test_alert_manager.py  test_system_monitor.py
